# idea-spreading-simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
core/include/: simulation.h
core/src/: simulation.c
include/: simulation.h
src/: main.c  simulation.c
visual/include/: renderer.h
visual/src/: main.cpp  renderer.cpp
